# alert_system

./: Cargo.toml  config_template.json
src/: main.rs
src/handlers/: alert_handler.rs  mod.rs
src/models/: alert.rs
src/routes/: api_routes.rs
src/services/: alarm_service.rs  feishu_service.rs  mod.rs  weixin_service.rs
src/utils/: config.rs
tests/: integration_tests.rs
