[package]
name = "alert_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4" # Web框架
serde = { version = "1", features = ["derive"] } # 序列化/反序列化
serde_json = "1" # JSON支持
reqwest = { version = "0.11", features = ["json", "blocking"] } # HTTP客户端
tokio = { version = "1", features = ["full"] } # 异步运行时
dotenv = "0.15" # 环境变量支持
log = "0.4" # 日志记录
env_logger = "0.9" # 环境日志记录器
